unused block of code was removed and fixed path error to login page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li><a href="#">Review</a></li>
                         <li><a href="#">FAQ</a></li>
                         <li><a href="#">Chat</a></li>
-                        <li class="btn"><a href="/scripting/Login/LogIn.html" target="_blank">LogIn</a></li>
+                        <li class="btn"><a href="/Login/LogIn.html" target="_blank">LogIn</a></li>
                     </ul>
                 </nav>
             </header>
@@ -50,11 +50,6 @@
                     <a href=""><i class="bi bi-xbox"></i></a>
                     <a href=""><i class="bi bi-steam"></i></a>
                 </div>
-
-                <div class="image">
-                    <img src=""alt="">
-                </div>
-
             </div>
         </div>
     </section>
